--- a/HTMLs/page1.html
+++ b/HTMLs/page1.html
@@ -16,7 +16,7 @@
 
     <button type="button" class="btn btn-dark"><a href="/HTMLs/Home.html">Go back to Home Page</a></button>
     
-    <div>
+    <div class="all">
 
         <img src="/images/phl gov.jpg" class="img-fluid" alt="phl-gov">
 
