--- a/HTMLs/page3.html
+++ b/HTMLs/page3.html
@@ -15,7 +15,7 @@
     <button type="button" class="btn btn-dark"><a href="/HTMLs/Home.html">Go back to Home Page</a></button>
 
 
-    <div>
+    <div class="all">
        
             
         <img src="/images/motorcycles.jpg" class="img-fluid" alt="motorcycles">
