--- a/HTMLs/page3.html
+++ b/HTMLs/page3.html
@@ -12,7 +12,7 @@
 
 
 <body>
-    <button type="button" class="btn btn-dark"><a href="/HTMLs/index.html   ">Go back to Home Page</a></button>
+    <button type="button" class="btn btn-dark"><a href="/index.html">Go back to Home Page</a></button>
 
 
     <div class="all">
