--- a/HTMLs/page1.html
+++ b/HTMLs/page1.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <button type="button" class="btn btn-dark"><a href="/HTMLs/index.html">Go back to Home Page</a></button>
+    <button type="button" class="btn btn-dark"><a href="/index.html">Go back to Home Page</a></button>
     
     <div class="all">
 
