--- a/HTMLs/page2.html
+++ b/HTMLs/page2.html
@@ -14,7 +14,7 @@
 
 
 <body>
-    <button type="button" class="btn btn-dark"><a href="/HTMLs/index.html">Go back to Home Page</a></button>
+    <button type="button" class="btn btn-dark"><a href="/index.html">Go back to Home Page</a></button>
 
     <div>
         <img src="/images/Hi (Customer's Name), (1).png" class="img-fluid" alt="Copywrite">
